# 6sintune

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
cli/: BUILD.bazel  go.mod  go.sum  main.go
cli/cmd/: BUILD.bazel  cost.go  cost_getAwsReport.go  getIssue.go  issues.go  listIssues.go  root.go  watchIssue.go
cli/pkg/util/: util.go
