load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/faryeyay/6sintune/cli/cmd

gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cost.go",
        "cost_getAwsReport.go",
        "issues.go",
        "issues_getIssue.go",
        "issues_listIssues.go",
        "issues_watchIssue.go",
        "root.go",
    ],
    importpath = "github.com/faryeyay/6sintune/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/pkg/util",
        "@com_github_andygrunwald_go_jira//:go-jira",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_costexplorer//:costexplorer",
        "@com_github_aws_aws_sdk_go_v2_service_costexplorer//types",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
